--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,17 @@ body {
     flex-direction: column;
     height: 100vh;
 }
+
+.btn-style{
+    padding: 15px;
+    margin: 10px;
+    border-radius: 15px;
+    background-color: #2599dd;
+    color: white;
+    border: none;
+    cursor: pointer;
+}
+
+.btn-style:hover{
+    background-color: rgba(49, 141, 194, 0.822);
+}
