--- a/src/styles.css
+++ b/src/styles.css
@@ -16,11 +16,12 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
+    height: auto;
+    margin: 50px;
 }
 
 .btn-style{
-    padding: 15px;
+    padding: 10px;
     margin: 10px;
     border-radius: 15px;
     background-color: #2599dd;
@@ -40,4 +41,14 @@ body {
     color: black;
     border-radius: 20px;
     text-align: center;
+    transition: .5s all ease-in;
+}
+
+.card-3{
+    padding: 30px;
+    background: white;
+    color: black;
+    border-radius: 20px;
+    text-align: center;
+    margin-bottom: 20px;
 }
